# ChatApplication

Client/Chat/: AddChannelForm.qml  AddParticipantsForm.qml  BusyIndicator.qml  CMakeLists.txt  ChatListItem.qml  ChatView.qml  ConversationItem.qml  LoginForm.qml  MemberItem.qml  MessageBox.qml  ParticipantItem.qml  ParticipantList.qml  ParticipantListItem.qml  ProfileForm.qml  SettingsView.qml  UsersModel.qml  authenticationform.cpp  authenticationform.h  chatstorage.cpp  chatstorage.h  commonutils.cpp  commonutils.h  conversationmodel.cpp  conversationmodel.h  coordinator.cpp  coordinator.h  main.cpp  main.qml  participantmodel.cpp  participantmodel.h  profiledata.cpp  profiledata.h  qml.qrc  stringlistmodel.cpp  stringlistmodel.h  uiutilities.js
DatabaseAdmin/AdminTool/: CMakeLists.txt  MainWindowInterface.h  authenticatedialog.cpp  authenticatedialog.h  authenticatedialog.ui  coordinator.cpp  coordinator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messageserialization.cpp  messageserialization.h  parametersserialization.h
DatabaseAdmin/AdminTool/ServerCommunication/: authutils.cpp  authutils.h  coordinatorinterface.h  messageserialization.cpp  messageserialization.h  parametersserialization.cpp  parametersserialization.h  servercommunicator.cpp  servercommunicator.h
Server/: .cproject  .project  CMakeLists.txt  conanfile.txt
Server/data/: config.json
Server/protobuf/: authentication.proto  messages.proto  person.proto
Server/src/: beast.hpp  common_types.h  http_session.cpp  http_session.hpp  listener.cpp  listener.hpp  main.cpp  messageserialization.cpp  messageserialization.h  net.hpp  parametersserialization.cpp  request_handlers.cpp  request_handlers.h  security.cpp  security.h  shared_state.cpp  shared_state.hpp  utilities.cpp  utilities.h  websocket_session.cpp  websocket_session.hpp
Server/src/database/: DatabaseTypes.cpp  DatabaseTypes.h  MessageDecoder.cpp  MongoRoutines.cpp  MongoRoutines.h
